# ffmpeg

./: .gitignore  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kbjay/ffmepegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: kj_player.cpp
app/src/main/cpp/include/: kj_player.h
app/src/main/java/com/kbjay/ffmepegdemo/: KJPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kbjay/ffmepegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
